--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <div></div>
         <script src="script.js" async defer></script>
     </body>
 </html>
